Add json source to include_directories
Signed-off-by: chavamee <chavamee@autodidact.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(fdlypp)
 add_subdirectory(cpr)
 
 set(srcs src/Feedly.cpp)
-include_directories(${CPR_INCLUDE_DIRS} "inc")
+include_directories(${CPR_INCLUDE_DIRS} "json/src" "inc")
 
 add_library(fdlypp SHARED ${srcs})
 target_link_libraries(fdlypp ${CPR_LIBRARIES})
