Manage fdly dependencies
Signed-off-by: chavamee <chavamee@autodidact.io>

--- a/ext/cpr/CMakeLists.txt
+++ b/ext/cpr/CMakeLists.txt
@@ -8,8 +8,7 @@ set(CPR_CMAKE_USE_OPENSSL OFF)
 
 ExternalProject_Add(cpr
     GIT_REPOSITORY  https://github.com/whoshuu/cpr
-    CMAKE_ARGS -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG:PATH=DebugLibs
-    -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE:PATH=ReleaseLibs
+    CMAKE_ARGS -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY=${DEPENDS_LIB_DIR}
     -DCMAKE_CXX_FLAGS=${MSVC_COMPILER_DEFS}
     -DUSE_SYSTEM_CURL=${CPR_USE_SYSTEM_CURL}
     -DBUILD_CPR_TESTS=${CPR_BUILD_CPR_TESTS}
